--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <svg xmlns="http://www.w3.org/2000/svg" width="0" height="0"></svg>
-    <div class="header">
+<body>
+
+<!-- HEADER -->
+
+    <header class="header">
       <div class="container flex-box">
         <div class="logo">
           <a href="#"> LOGO </a>
         </div>
+
+        <nav>
         <ul class="block-list">
           <li><a class="active" href="#">Главная</a></li>
           <li><a href="#">Об авторе</a></li>
@@ -19,9 +25,14 @@
           <li><a href="#">Процесс</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
+      </nav>
       </div>
-    </div>
-    <div class="design">
+</header>
+
+<!-- MAIN -->
+
+<main>
+    <section class="section_1">
       <div class="container">
         <div class="design-box">
           <h1>Дизайн и верстка</h1>
@@ -33,8 +44,9 @@
           <button class="btn">Написать мне</button>
         </div>
       </div>
-    </div>
-    <div class="about">
+    </section>
+
+    <section class="section_2">
       <div class="container">
         <div class="about-box">
           <h2>Обо мне</h2>
@@ -45,11 +57,11 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="projects">
+    </section>
+
+    <section class="projects">
       <div class="container">
         <div class="flex-box">
-
             <a class="card" href="#">
                 <img class="card-img" src="images/project.png" alt="proj">
               <p class="fz"><span class="fs">40+ </span> проектов</p></a>
@@ -70,9 +82,9 @@
               <p class="fz"><span class="fs">40+ </span> проектов</p></a>
             </div>
         </div>
-      </div>
-    </div>
-    <div class="about">
+      </section>
+
+    <section class="section_3">
       <div class="container">
         <div class="about-box">
           <h2>Как я работаю</h2>
@@ -82,6 +94,7 @@
             латинице с начала XVI века.
           </p>
         </div>
+
         <div class="code-img">
           <img width="1200" height="600" src="images/code.png" alt="code" />
         </div>
@@ -89,8 +102,14 @@
           <button class="btn">Написать мне</button>
         </div>
       </div>
-    </div>
-    <div class="footer">(c) 2022
+    </section>
+  </main>
+
+<!-- FOOTER -->
+
+
+    <footer class="footer"> 
+      <p>© 2022 Все права защищены.</p>
       <ul class="social">
         <li>
       <a href="#">
@@ -128,7 +147,6 @@
       </a>
     </li>
     </ul>
-    </div>
-
+    </footer>
   </body>
 </html>
